# bitcoin-addr-generator

./: README.md  go.mod  go.sum  main.go  test-api.sh
base58check/: wif.go
bip44/: bip44.go
bips/: bips.go  btckeygen.go  http_api.go
cmd/bitcoin-addr-generator/: hd_path.go  main.go
cmd/demo/: main.go
random/: fortuna.go  random.go
rust/: Cargo.toml  README.md  rust-toolchain  test-api.sh
rust/src/: handle_multisig_p2sh_addr.rs  handle_segwit_addr.rs  main.rs
